# orient

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/orient/: __init__.py  _discover.py  _inference.py  _model.py  _preprocess.py  _rotation.py
tests/: test_api.py  test_discover.py  test_inference.py  test_integration.py  test_preprocess.py  test_rotation.py
