[project]
name = "orient-img"
version = "0.2.0"
description = "Detect and fix orientation of images using deep learning"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Nisarag Bhatt" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "tensorflow>=2.16",
    "transformers>=4.30,<5",
    "tf-keras>=2.16",
    "numpy>=1.23",
    "Pillow>=10.0",
    "huggingface-hub>=0.20",
    "piexif>=1.1.3",
]

[project.urls]
Homepage = "https://github.com/FocalChord/orient"
Repository = "https://github.com/FocalChord/orient"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
